lintian (2.5.22) UNRELEASED; urgency=medium

  XXX: generate tag summary with private/generate-tag-summary

  * checks/*.desc:
    + [NT] Avoid using "I" or "we" in tag descriptions.
  * checks/cruft.pm:
    + [BR,NT] Optimise the GFDL check considerably in some
      cases (e.g. the linux source).  (Closes: #738342)
    + [BR] Factorize GFDL detection. Detect non official
      wordings of GFDL invariant section.  (Closes: #717916).
    + [BR] Add opentoken non official wording for GFDL
      invariant section, thanks to Nicolas Boulenguez.
      (Closes: #740183).
  * checks/menu-format.desc:
    + [NT] Apply patch from Charles Plessy to correct an URL
      in a tag reference.  (Closes: #738454)
  * checks/symlinks.pm:
    + [BR] Use Lintian::Data for safe symlinks list. Add
      /dev/null to this list.  (Closes: #740339).
  * checks/systemd.pm:
    + [BR] Allow spaces arround = in service files.
      (Closes: #739366).
  * checks/watch-file.{desc,pm}:
    + [BR] Allow debian/upstream-signing-key.asc,
      thanks to Nicolas Boulenguez (Closes: #736711).
    + [NT] Apply patch from Daniel Kahn Gillmor to check for
      the upstream signing key in debian/upstream.  Thanks to
      Hideki Yamane for the bug report.  (Closes: #738597)

  * collection/java-info:
    + [NT] Update the conditional using file(1) to cope with
      the new output for JAR files.

  * data:
    + [NT] Refresh several architecture data files against
      dpkg 1.17.5.  Thanks to James Hunt for the reminder.
      (Closes: #735266)
  * data/binary/embedded-libs:
    + [RG] Detect embedded copies of liblivemedia and libgadu.
    + [RG] Adjust the detection of embedded copies of libmagic.
  * data/cruft/non-free-files:
    + [BR] "id3v22-tda.mp3 considered non-free", thanks to Charlie
      Smotherman (Closes: #736203).
  * data/files/privacy*:
    + [BR] Improve detection of privacy-breach-google-cse, thanks to
      Paul Wise (Closes: #739247).