@@ -50,7 +50,7 @@ sub run {
     my @dep_fields
       = qw(depends pre-depends recommends suggests conflicts replaces);
 
-    foreach my $pkg1 (sort $info->binaries) {
+    foreach my $pkg1 ($info->binaries) {
         my ($pkg1_is_any, $pkg2, $pkg2_is_any, $substvar_strips_binNMU);
 
         $pkg1_is_any
